--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
   <header><h1>El Desafio de volver a casa en América del Sur</h1></header>
-  <subtitle><h3> Descubre los riesgos y el largo viaje que están haciendo los migrantes con la nueva política migratoria estadounidense para volver a casa</h3></subtitle>
+  <subtitle><h3>A partir de la nueva política migratoria de Estados Unidos muchas familias migrantes han decidido volver a sus países o buscar una mejor vida en otros países del continente y dandole la espalda al sueño americano</h3></subtitle>
 
   <section id="cap1" class="chapter">
     <h2>La Frontera México-EE.UU.</h2>
     <p></p>
     <!-- pega aquí el iframe que te dio uMap -->
-    <iframe class="map-frame" src="//umap.openstreetmap.fr/es/map/new/?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=false&editMode=disabled&moreControl=false&searchControl=false&tilelayersControl=false&embedControl=false&datalayersControl=true&onLoadPanel=none&captionBar=false&captionMenus=false&homeControl=false&fullscreenControl=false&captionControl=false&locateControl=false&measureControl=false&editinosmControl=false&printControl=false#13/28.8349/-17.7724"></iframe>
+    <iframe class="map-frame" src=//umap.openstreetmap.fr/es/map/mapa-sin-titulo_1345641?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=false&editMode=disabled&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=caption&captionBar=false&captionMenus=true&fullscreenControl=false#7/27.917/-106.194"></iframe><p><a href="//umap.openstreetmap.fr/es/map/mapa-sin-titulo_1345641?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=false&editMode=disabled&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=caption&captionBar=false&captionMenus=true&fullscreenControl=false#7/27.917/-106.194"></iframe>
   </section>
 
   <section id="cap2" class="chapter">
