--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </style>
 </head>
 <body>
-  <header><h1>El Desafio de volver a casa en América del Sur</h1></header>
+  <header><h1>El Desafio de voler a casa en América del Sur</h1></header>
   <subtitle><h3>A partir de la nueva política migratoria de Estados Unidos muchas familias migrantes han decidido volver a sus países o buscar una mejor vida en otros países del continente y dandole la espalda al sueño americano</h3></subtitle>
 
   <section id="cap1" class="chapter">
