--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>La Frontera México-EE.UU.</h2>
     <p></p>
     <!-- pega aquí el iframe que te dio uMap -->
-    <iframe class="map-frame" src=<iframe style="width: 100%; height: 300px; border: 0;" allowfullscreen allow="geolocation" src="//umap.openstreetmap.fr/es/map/mapa-sin-titulo_1345641?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=false&editMode=disabled&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=none&captionBar=false&captionMenus=false&fullscreenControl=false#7/28.135/-107.677"></iframe><p><a href="//umap.openstreetmap.fr/es/map/mapa-sin-titulo_1345641?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=false&editMode=disabled&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=none&captionBar=false&captionMenus=false&fullscreenControl=false#7/28.135/-107.677">
+    <iframe class="map-frame" src=//umap.openstreetmap.fr/es/map/mapa-sin-titulo_1345641?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=false&editMode=disabled&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=none&captionBar=false&captionMenus=false&fullscreenControl=false#7/28.135/-107.677"></iframe><p><a href="//umap.openstreetmap.fr/es/map/mapa-sin-titulo_1345641?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=false&editMode=disabled&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=none&captionBar=false&captionMenus=false&fullscreenControl=false#7/28.135/-107.677">
   </section>
 
   <section id="cap2" class="chapter">
