--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <section id="cap1" class="chapter">
     <h2>La Frontera México-EE.UU.</h2>
-    <p></p>
+    <p>Durante muchos años ha sido uno de los puntos más conflictivos en las rutas de migrantes, pero el regreso de Trump con la eliminación del CBP One ha provocado que actualmente muchas familias abandonen el viaje y según datos de la BBC el número total de encuentros con la patrulla fronteriza al mes ha llegado a estar en 0</p>
     <!-- pega aquí el iframe que te dio uMap -->
     <iframe class="map-frame" src="//umap.openstreetmap.fr/es/map/mapa-sin-titulo_1345641?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=false&editMode=disabled&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=none&captionBar=false&captionMenus=false&fullscreenControl=false#7/31.368/-109.819"></iframe><p><a href="//umap.openstreetmap.fr/es/map/mapa-sin-titulo_1345641?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=false&editMode=disabled&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=none&captionBar=false&captionMenus=false&fullscreenControl=false#7/31.368/-109.819">
   </section>
