--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Story: Faros La Palma</title>
+  <title>Story:Volver a Casa en América del Sur</title>
   <style>
     body { font-family: Arial; margin:0; }
     .chapter { padding: 2rem; min-height: 70vh; }
@@ -10,20 +10,20 @@
   </style>
 </head>
 <body>
-  <header><h1>El Desafio de voler a casa en América del Sur</h1></header>
+  <header><h1>El desafio de volver a casa en América del Sur</h1></header>
   <subtitle><h3>A partir de la nueva política migratoria de Estados Unidos muchas familias migrantes han decidido volver a sus países o buscar una mejor vida en otros países del continente y dandole la espalda al sueño americano</h3></subtitle>
 
   <section id="cap1" class="chapter">
-    <h2>La Frontera México-EE.UU.</h2>
-    <p>Durante muchos años ha sido uno de los puntos más conflictivos en las rutas de migrantes, pero el regreso de Trump con la eliminación del CBP One ha provocado que actualmente muchas familias abandonen el viaje y <a href="https://www.bbc.com/mundo/articles/cr7mpxkg8ejo">según datos de la BBC</a> el número total de encuentros con la patrulla fronteriza al mes ha llegado a estar en 0</p>
+    <h2>La Frontera México-EE.UU., el inicio y el fin del sueño americano</h2>
+    <p>Durante muchos años, la frontera entre México y Estados Unidos ha sido uno de los puntos más conflictivos en las rutas de migrantes, pero el regreso de Trump con la eliminación del CBP One ha provocado que actualmente muchas familias abandonen el viaje y <a href="https://www.bbc.com/mundo/articles/cr7mpxkg8ejo">según datos de la BBC</a> el número total de encuentros con la patrulla fronteriza al mes ha llegado a estar en números muy bajos y que incluso contrastan con la primera etapa del presidente estadounidense</p>
     <!-- pega aquí el iframe que te dio uMap -->
     <iframe class="map-frame" src="//umap.openstreetmap.fr/es/map/mapa-sin-titulo_1345641?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=false&editMode=disabled&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=none&captionBar=false&captionMenus=false&fullscreenControl=false#7/31.368/-109.819"></iframe><p><a href="//umap.openstreetmap.fr/es/map/mapa-sin-titulo_1345641?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=false&editMode=disabled&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=none&captionBar=false&captionMenus=false&fullscreenControl=false#7/31.368/-109.819">
   </section>
 
   <section id="cap2" class="chapter">
-    <h2>Faro Fuencaliente</h2>
-    <p>Texto narrativo para Faro 2.</p>
-    <iframe class="map-frame" src="//umap.openstreetmap.fr/es/map/new/?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=false&editMode=disabled&moreControl=false&searchControl=false&tilelayersControl=false&embedControl=false&datalayersControl=true&onLoadPanel=none&captionBar=false&captionMenus=false&homeControl=false&fullscreenControl=false&captionControl=false&locateControl=false&measureControl=false&editinosmControl=false&printControl=false#13/28.4802/-17.8440"></iframe>
+    <h2>Una nueva oportunidad volviendo a casa</h2>
+    <p>Debido a la política migratoria de Trump, son muchos los emigrantes que han decidido volver a sus países, pero también hay muchos otros que están optando por intentar construir su vida en algunas de las ciudades de paso, como en Ciudad de México u otras ciudades más al sur. El miedo a un futuro incierto, la suspensión de mecanismos de regularización de migrantes y la sensación de que ya no es posible viajar al norte <a href=https://www.nytimes.com/es/2025/08/22/espanol/estados-unidos/eeuu-poblacion-migrante-disminuye.html> han marcado 2025 como el primer año en décadas en el que la población migrante disminuye</a></p>
+    <iframe class="map-frame" src="//umap.openstreetmap.fr/es/map/mapa-sin-titulo_1345641?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=false&editMode=disabled&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=none&captionBar=false&captionMenus=false&fullscreenControl=false#7/17.429/-93.230"></iframe><p><a href="//umap.openstreetmap.fr/es/map/mapa-sin-titulo_1345641?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=false&editMode=disabled&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=none&captionBar=false&captionMenus=false&fullscreenControl=false#7/17.429/-93.230">
   </section>
 
 <section id="cap2" class="chapter">
