--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 <section id="cap2" class="chapter">
     <h2>Faro Fuencaliente</h2>
     <p>Texto narrativo para Faro 2.</p>
-    <iframe class="map-frame" src="//umap.openstreetmap.fr/es/map/new/?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=false&editMode=disabled&moreControl=false&searchControl=false&tilelayersControl=false&embedControl=false&datalayersControl=true&onLoadPanel=none&captionBar=false&captionMenus=false&homeControl=false&fullscreenControl=false&captionControl=false&locateControl=false&measureControl=false&editinosmControl=false&printControl=false#13/28.4802/-17.8440"></iframe>
-  </section>
+    <iframe class="map-frame" src="//umap.openstreetmap.fr/es/map/mapa-sin-titulo_1345641?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=false&editMode=disabled&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=none&captionBar=false&captionMenus=false&fullscreenControl=false#9/8.4112/-78.6072"></iframe><p>
 
   <section id="cap2" class="chapter">
     <h2>Faro Fuencaliente</h2>
