--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h2>Una nueva oportunidad volviendo a casa</h2>
     <p>Debido a la política migratoria de Trump, son muchos los emigrantes que han decidido volver a sus países, pero también hay muchos otros que están optando por intentar construir su vida en algunas de las ciudades de paso, como en Ciudad de México u otras ciudades más al sur. El miedo a un futuro incierto, la suspensión de mecanismos de regularización de migrantes y la sensación de que ya no es posible viajar al norte <a href=https://www.nytimes.com/es/2025/08/22/espanol/estados-unidos/eeuu-poblacion-migrante-disminuye.html> han marcado 2025 como el primer año en décadas en el que la población migrante disminuye</a></p>
      <!-- pega aquí el iframe que te dio uMap -->
-    <iframe class="map-frame" src"//umap.openstreetmap.fr/es/map/mapa-sin-titulo_1345641?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=false&editMode=disabled&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=none&captionBar=false&captionMenus=false&fullscreenControl=false#7/18.391/-93.812"></iframe><p>
+    <iframe class="map-frame" src="//umap.openstreetmap.fr/es/map/mapa-sin-titulo_1345641?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=false&editMode=disabled&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=none&captionBar=false&captionMenus=false&fullscreenControl=false#7/18.391/-93.812"></iframe><p>
   </section>
 
 <section id="cap2" class="chapter">
