--- a/index.html
+++ b/index.html
@@ -36,5 +36,4 @@
   <section id="cap2" class="chapter">
     <h2>Faro Fuencaliente</h2>
     <p>Texto narrativo para Faro 2.</p>
-    <iframe class="map-frame" src="//umap.openstreetmap.fr/es/map/new/?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=false&editMode=disabled&moreControl=false&searchControl=false&tilelayersControl=false&embedControl=false&datalayersControl=true&onLoadPanel=none&captionBar=false&captionMenus=false&homeControl=false&fullscreenControl=false&captionControl=false&locateControl=false&measureControl=false&editinosmControl=false&printControl=false#13/28.4802/-17.8440"></iframe>
-  </section>
+    <iframe class="map-frame" src="//umap.openstreetmap.fr/es/map/mapas-rutas-migratorias_1345641?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=true&editMode=disabled&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=none&captionBar=false&captionMenus=true#7/6.048/-76.333"></iframe><p>
