--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
   </section>
   
   <section id="cap2" class="chapter">
-    <h2>Faro Fuencaliente</h2>
-    <p>Texto narrativo para Faro 2.</p>
-    <iframe class="map-frame" src="//umap.openstreetmap.fr/es/map/mapas-rutas-migratorias_1345641?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=true&editMode=disabled&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=none&captionBar=false&captionMenus=true#7/6.048/-76.333"></iframe><p>
+    <h2>La Vuelta a Casa </h2>
+    <p>Desde el inicio del nuevo gobierno de Donald Trump, el presidente ha llevado a cabo varias medidas para deportar a los emigrantes con el objetivo de llegar a más del millón de deportados al año y <a href="https://www.laprensa.hn/mundo/donald-trump-record-acciones-migratorias-estados-unidos-BB28922311en"> tan solo 2025 ya ha conseguido números más grandes que en todo su primer mandato</a>. Otra medida del presidente americano también ha sido la "autodeportación" que a <a href=https://www.rtve.es/noticias/20250520/migrantes-regresan-paises-primer-vuelo-autodeportados-trump/16587834.shtml> mitad de año nos dejaba con unos 60 migrantes colombianos y hondureños que volvián a sus países con viajes pagados y 1000 dolares</a>. Pero aun así son muchos los migrantes que se han quedado en mitad de su viaje al saber que ya no podián entrar en Estados Unidos con la seguridad que les daba el sistema CBP One.  </p>
+    <iframe class="map-frame" src="//umap.openstreetmap.fr/es/map/mapas-rutas-migratorias_1345641?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=true&editMode=disabled&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=none&captionBar=false&captionMenus=true#7/6.048/-76.333"></iframe><p>
